# minigltf

./: Cargo.toml  LICENSE  README.md
benches/: Cargo.toml
benches/src/: main.rs
src/: gltf_json.rs  lib.rs
src/gltf_json/: accessor.rs  animation.rs  asset.rs  buffer.rs  buffer_view.rs  camera.rs  image.rs  material.rs  mesh.rs  node.rs  scene.rs  skin.rs  texture.rs
