[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
gltf = "1.1.0"

# local:
minigltf.path = "../"

# head:
# minigltf = { git="https://github.com/EriKWDev/gltf_viewer.git" }

# attributes as hashmaps:
# minigltf = { git="https://github.com/EriKWDev/gltf_viewer.git", rev="877fabec48b55e936dae43b24fb73a3f8593e383" }

[[bench]]
name = "main"
path = "src/main.rs"
harness = false
